# open-api-spec/openapi.json
@@ -590,13 +590,169 @@
         }
       }
     },
+    "/v1/policies/me": {
+      "get": {
+        "tags": [
+          "policies"
+        ],
+        "summary": "List policies for a given Tenant and Service Path that apply to me",
+        "description": "Policies can be filtered by:\n  - Access Mode\n  - Agent\n  - Agent Type\n  - Resource\n  - Resource Type\nIn case an JWT token is passed over, user id, roles and groups are used to\nfilter policies that are only valid for him. Unless the user is super admin or tenant admin.\nTo return policies from a service path tree, you can used the wildchar \"#\".\nFor example, using `/Path1/#` you will obtain policies for all subpaths,\nsuch as: `/Path1/SubPath1` or `/Path1/SubPath1/SubSubPath1`.",
+        "operationId": "my_policies_v1_policies_me_get",
+        "parameters": [
+          {
+            "required": false,
+            "schema": {
+              "title": "Mode",
+              "type": "string"
+            },
+            "name": "mode",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Agent",
+              "type": "string"
+            },
+            "name": "agent",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Resource",
+              "type": "string"
+            },
+            "name": "resource",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Resource Type",
+              "type": "string"
+            },
+            "name": "resource_type",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Agent Type",
+              "type": "string"
+            },
+            "name": "agent_type",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Skip",
+              "type": "integer",
+              "default": 0
+            },
+            "name": "skip",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Limit",
+              "type": "integer",
+              "default": 100
+            },
+            "name": "limit",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Fiware-Service",
+              "type": "string"
+            },
+            "name": "fiware-service",
+            "in": "header"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Fiware-Servicepath",
+              "type": "string",
+              "default": "/#"
+            },
+            "name": "fiware-servicepath",
+            "in": "header"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Accept",
+              "type": "string",
+              "default": "application/json"
+            },
+            "name": "accept",
+            "in": "header"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "title": "Response My Policies V1 Policies Me Get",
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Policy"
+                  }
+                }
+              },
+              "text/turtle": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": [
+                  "@prefix acl: <http://www.w3.org/ns/auth/acl#> .\n\n<http:/www.w3.org/ns/auth/0723f0fd-785d-4091-bcc7-964361602421> acl:accessTo </v2/entities/urn:pippo> ;\n    acl:agentClass <acl:AuthenticatedAgent> ;\n    acl:mode <acl:Read>,\n        <acl:Write> .\n\n<http:/www.w3.org/ns/auth/16bdc820-4177-4403-a3e5-7c12abb57751> acl:accessTo </v2/entities/> ;\n    acl:agentClass <acl:AuthenticatedAgent> ;\n    acl:mode <acl:Read> ."
+                ]
+              },
+              "text/rego": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": [
+                  "\n                    {\n                      \"user_permissions\": {\n                        \"admin@mail.com\": [\n                          {\n                            \"id\": \"16c79213-5f9a-42c0-a37f-307c3c1614c3\",\n                            \"action\": \"acl:Control\",\n                            \"resource\": \"urn:ngsi-ld:AirQualityObserved:demo\",\n                            \"resource_type\": \"entity\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          }\n                        ]\n                      },\n                      \"default_user_permissions\": {},\n                      \"group_permissions\": {\n                        \"User\": [\n                          {\n                            \"id\": \"1180e176-a39b-4dd0-b261-1c030123395d\",\n                            \"action\": \"acl:Read\",\n                            \"resource\": \"/v2/entities/some_entity\",\n                            \"resource_type\": \"entity\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          }\n                        ]\n                      },\n                      \"default_group_permissions\": {},\n                      \"role_permissions\": {\n                        \"AuthenticatedAgent\": [\n                          {\n                            \"id\": \"eecd7954-03e9-4a58-9076-79c4c9fa26d5\",\n                            \"action\": \"acl:Write\",\n                            \"resource\": \"*\",\n                            \"resource_type\": \"entity\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          },\n                          {\n                            \"id\": \"91934c76-5017-44c4-9cc8-8fac8ebffa59\",\n                            \"action\": \"acl:Control\",\n                            \"resource\": \"*\",\n                            \"resource_type\": \"entity\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          },\n                          {\n                            \"id\": \"6d0d3663-125a-494e-9f18-aa0d2e8725a3\",\n                            \"action\": \"acl:Read\",\n                            \"resource\": \"*\",\n                            \"resource_type\": \"policy\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          },\n                          {\n                            \"id\": \"cdd1530d-669d-41d2-b79e-62eb4f70428e\",\n                            \"action\": \"acl:Write\",\n                            \"resource\": \"*\",\n                            \"resource_type\": \"policy\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          },\n                          {\n                            \"id\": \"0860514b-da0f-4e89-813b-4675aef1e2fe\",\n                            \"action\": \"acl:Read\",\n                            \"resource\": \"Tenant1\",\n                            \"resource_type\": \"tenant\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          },\n                          {\n                            \"id\": \"15f707e6-efd5-481a-b624-ea90046876da\",\n                            \"action\": \"acl:Write\",\n                            \"resource\": \"Tenant1\",\n                            \"resource_type\": \"tenant\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          },\n                          {\n                            \"id\": \"0641364c-9215-4f2e-aa0b-577d6bb9a4a3\",\n                            \"action\": \"acl:Read\",\n                            \"resource\": \"/\",\n                            \"resource_type\": \"service_path\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          },\n                          {\n                            \"id\": \"685f98a3-71cb-4867-86e5-939bb838786b\",\n                            \"action\": \"acl:Write\",\n                            \"resource\": \"/\",\n                            \"resource_type\": \"service_path\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          }\n                        ]\n                      },\n                      \"default_role_permissions\": {\n                        \"AuthenticatedAgent\": [\n                          {\n                            \"id\": \"f0c9d421-5da5-439b-85b9-84d6636af9d8\",\n                            \"action\": \"acl:Read\",\n                            \"resource\": \"default\",\n                            \"resource_type\": \"entity\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          }\n                        ],\n                        \"Admin\": [\n                          {\n                            \"id\": \"5700d831-4f59-4f2c-9aab-01ab010193cd\",\n                            \"action\": \"acl:Control\",\n                            \"resource\": \"default\",\n                            \"resource_type\": \"policy\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          },\n                          {\n                            \"id\": \"6caff4de-ce49-4cd3-a3d8-1a808bd4cbbd\",\n                            \"action\": \"acl:Control\",\n                            \"resource\": \"default\",\n                            \"resource_type\": \"entity\",\n                            \"service_path\": \"/\",\n                            \"tenant\": \"Tenant1\"\n                          }\n                        ]\n                      }\n                    }"
+                ]
+              }
+            }
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "OptionalHTTPBearer": []
+          }
+        ]
+      }
+    },
     "/v1/policies/": {
       "get": {
         "tags": [
           "policies"
         ],
         "summary": "List policies for a given Tenant and Service Path",
-        "description": "Policies can be filtered by:\n  - Access Mode\n  - Agent\n  - Agent Type\n  - Resource\n  - Resource Type\nIn case an JWT token is passed over, user id, roles and groups are used to\nfilter policies that are only valid for him.\nTo return policies from a service path tree, you can used the wildchar \"#\".\nFor example, using `/Path1/#` you will obtain policies for all subpaths,\nsuch as: `/Path1/SubPath1` or `/Path1/SubPath1/SubSubPath1`.",
+        "description": "Policies can be filtered by:\n  - Access Mode\n  - Agent\n  - Agent Type\n  - Resource\n  - Resource Type\nIn case an JWT token is passed over, user id, roles and groups are used to\nfilter policies that are only valid for him. Unless the user is super admin or tenant admin.\nTo return policies from a service path tree, you can used the wildchar \"#\".\nFor example, using `/Path1/#` you will obtain policies for all subpaths,\nsuch as: `/Path1/SubPath1` or `/Path1/SubPath1/SubSubPath1`.",
         "operationId": "read_policies_v1_policies__get",
         "parameters": [
           {
@@ -818,26 +974,6 @@
             },
             "name": "policy_id",
             "in": "path"
-          },
-          {
-            "required": false,
-            "schema": {
-              "title": "Skip",
-              "type": "integer",
-              "default": 0
-            },
-            "name": "skip",
-            "in": "query"
-          },
-          {
-            "required": false,
-            "schema": {
-              "title": "Limit",
-              "type": "integer",
-              "default": 100
-            },
-            "name": "limit",
-            "in": "query"
           },
           {
             "required": false,
